# home-assistant-assist-desktop

./: README.md  bun.lockb  index.html  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.svelte  homeAssistant.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: audioRecorder.ts  homeAssistant.ts
src/pages/: Home.svelte  Settings.svelte
src/types/: assistResponse.ts  homeAssistantAssist.ts  settings.ts
